--- a/publication.html
+++ b/publication.html
@@ -47,13 +47,13 @@ Machine Learning Journal (<b>MLJ</b>), 2014. <br />
 <h2>Others</h2>
 <p><b>Preprints</b></p>
 <ul>
-<li><p><a href="https://arxiv.org/pdf/1910.04483.pdf" target=&ldquo;blank&rdquo;><font color="blue">On Scalable Variant of Wasserstein Barycenter</font></a> <br />
-ArXiv, 2019. <br />
-<b>Tam Le</b><font color="red">*</font>, Viet Huynh<font color="red">*</font>, Nhat Ho<font color="red">*</font>, Dinh Phung, Makoto Yamada</p>
-</li>
 <li><p><a href="https://arxiv.org/pdf/1910.04462.pdf" target=&ldquo;blank&rdquo;><font color="blue">Computationally Efficient Tree Variants of Gromov-Wasserstein</font></a> <br />
 ArXiv, 2019. <br />
 <b>Tam Le</b><font color="red">*</font>, Nhat Ho<font color="red">*</font>, Makoto Yamada</p>
+</li>
+<li><p><a href="https://arxiv.org/pdf/1910.04483.pdf" target=&ldquo;blank&rdquo;><font color="blue">On Scalable Variant of Wasserstein Barycenter</font></a> <br />
+ArXiv, 2019. <br />
+<b>Tam Le</b><font color="red">*</font>, Viet Huynh<font color="red">*</font>, Nhat Ho<font color="red">*</font>, Dinh Phung, Makoto Yamada</p>
 </li>
 <li><p><a href="https://arxiv.org/pdf/1909.02373.pdf" target=&ldquo;blank&rdquo;><font color="blue">LSMI-Sinkhorn: Semi-supervised Squared-Loss Mutual Information Estimation with Optimal Transport</font></a> <br />
 ArXiv, 2019. <br />
@@ -96,6 +96,8 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 <h2>Workshop Posters / Talks</h2>
 <p><b>Workshop Posters</b></p>
 <ul>
+<li><p>Eugene Ndiaye, <b>Tam Le</b>, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi, <font color="blue">Safe Grid Search with Optimal Complexity</font>. <a href="https://miaoxu-ml.github.io/aip_workshop.html" target=&ldquo;blank&rdquo;>The ACML&rsquo;2019 RIKEN AIP Workshop</a>, 2019.</p>
+</li>
 <li><p>2019, <font color="blue">Tree-Sliced Approximation of Wasserstein Distances</font>, <a href="http://aisociety.kr/KJMLW2019/" target=&ldquo;blank&rdquo;>Korea-Japan Machine Learning workshop</a>. [<a href="https://www.dropbox.com/s/pym938fkamamgyo/TLMYKFMC_KJworkshop19_Tree-SlicedWasserstein.pdf?dl=0" target=&ldquo;blank&rdquo;>Poster</a>]</p>
 </li>
 <li><p>2019, <font color="blue">Persistence Fisher Kernel: A Riemannian Manifold Kernel for Persistence Diagrams</font>, <a href="http://aisociety.kr/KJMLW2019/" target=&ldquo;blank&rdquo;>Korea-Japan Machine Learning workshop</a>.</p>
@@ -126,7 +128,7 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-10-26 08:13:54 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2019-11-30 23:10:09 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
