--- a/professional.html
+++ b/professional.html
@@ -34,7 +34,7 @@
 <ul>
 <li><p>Neural Information Processing Systems (<b>NeurIPS/NIPS</b>): 2015, 2019</p>
 </li>
-<li><p>International Conference on Machine Learning (<b>ICML</b>): 2015, 2019</p>
+<li><p>International Conference on Machine Learning (<b>ICML</b>): 2015, 2019-2020</p>
 </li>
 <li><p>International Conference on Artificial Intelligence and Statistics (AISTATS): 2020</p>
 </li>
@@ -121,7 +121,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-10-26 08:13:54 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2019-11-30 23:10:09 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
