--- a/publication.html
+++ b/publication.html
@@ -23,7 +23,7 @@
 <p>(<font color="red">*</font>: equal contribution)</p>
 <h2>Selected Journals / Conference papers</h2>
 <ul>
-<li><p><a href="https://arxiv.org/pdf/1902.00342.pdf" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Variants of Wasserstein Distances</font></a> [<a href="https://www.dropbox.com/s/4ugbmyu5jepxun0/TLMYKFMC_NeurIPS19_TSW.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
+<li><p><a href="https://papers.nips.cc/paper/9396-tree-sliced-variants-of-wasserstein-distances.pdf" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Variants of Wasserstein Distances</font></a>. [<a href="https://papers.nips.cc/paper/9396-tree-sliced-variants-of-wasserstein-distances-supplemental.zip" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/4ugbmyu5jepxun0/TLMYKFMC_NeurIPS19_TSW.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
 Neural Information Processing Systems (<b>NeurIPS/NIPS</b>), 2019. (<i>Acceptance rate: 1428/6743=21.2%</i>) <br /> 
 <b>Tam Le</b>, Makoto Yamada, Kenji Fukumizu, Marco Cuturi</p>
 </li>
@@ -47,7 +47,7 @@ Machine Learning Journal (<b>MLJ</b>), 2014. <br />
 <h2>Others</h2>
 <p><b>Preprints</b></p>
 <ul>
-<li><p><a href="https://arxiv.org/pdf/1910.04462.pdf" target=&ldquo;blank&rdquo;><font color="blue">Computationally Efficient Tree Variants of Gromov-Wasserstein</font></a> <br />
+<li><p><a href="https://arxiv.org/pdf/1910.04462.pdf" target=&ldquo;blank&rdquo;><font color="blue">Fast Tree Variants of Gromov-Wasserstein</font></a> <br />
 ArXiv, 2019. <br />
 <b>Tam Le</b><font color="red">*</font>, Nhat Ho<font color="red">*</font>, Makoto Yamada</p>
 </li>
@@ -128,7 +128,7 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-11-30 23:10:09 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2019-12-26 15:22:37 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
