--- a/publication.html
+++ b/publication.html
@@ -63,7 +63,7 @@ Yanbin Liu<font color="red">*</font>, Makoto Yamada<font color="red">*</font>, Y
 <p><b>Other Journals / Conference papers / Technical reports</b></p>
 <ul>
 <li><p><a href="https://arxiv.org/pdf/1902.09722.pdf" target=&ldquo;blank&rdquo;><font color="blue">Topological Bayesian Optimization with Persistence Diagrams</font></a> <br />
-ArXiv, 2019. <br />
+European Conference on Artificial Intelligence (ECAI), 2020. <br />
 Tatsuya Shiraishi, <b>Tam Le</b>, Hisashi Kashima, Makoto Yamada</p>
 </li>
 <li><p><a href="https://www.tandfonline.com/doi/full/10.1080/14686996.2018.1439253#aHR0cHM6Ly93d3cudGFuZGZvbmxpbmUuY29tL2RvaS9wZGYvMTAuMTA4MC8xNDY4Njk5Ni4yMDE4LjE0MzkyNTM/bmVlZEFjY2Vzcz10cnVlQEBAMA==" target=&ldquo;blank&rdquo;><font color="blue">A General Representation Scheme for Crystalline Solids based on Voronoi-Tessellation Real Feature Values and Atomic Property Data</font></a> <br />
@@ -128,7 +128,7 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-12-26 15:22:37 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-01-15 15:36:18 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
