--- a/publication.html
+++ b/publication.html
@@ -51,7 +51,7 @@ Machine Learning Journal (<b>MLJ</b>), 2014. <br />
 ArXiv, 2019. <br />
 <b>Tam Le</b><font color="red">*</font>, Nhat Ho<font color="red">*</font>, Makoto Yamada</p>
 </li>
-<li><p><a href="https://arxiv.org/pdf/1910.04483.pdf" target=&ldquo;blank&rdquo;><font color="blue">On Scalable Variant of Wasserstein Barycenter</font></a> <br />
+<li><p><a href="https://arxiv.org/pdf/1910.04483.pdf" target=&ldquo;blank&rdquo;><font color="blue">Tree-Wasserstein Barycenter for Large-Scale Multilevel Clustering and Scalable Bayes</font></a> <br />
 ArXiv, 2019. <br />
 <b>Tam Le</b><font color="red">*</font>, Viet Huynh<font color="red">*</font>, Nhat Ho<font color="red">*</font>, Dinh Phung, Makoto Yamada</p>
 </li>
@@ -128,7 +128,7 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-01-15 15:36:18 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-02-26 19:54:04 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
