--- a/code.html
+++ b/code.html
@@ -21,7 +21,7 @@
 <h1>Tam Le - Code &amp; Datasets</h1>
 </div>
 <ul>
-<li><p><a href="https://github.com/lttam/TreeWasserstein" target=&ldquo;blank&rdquo;>Tree-(Sliced)-Wasserstein Distances</a>. (NeurIPS/NIPS 2019)</p>
+<li><p><a href="https://github.com/lttam/TreeWasserstein" target=&ldquo;blank&rdquo;>Tree-(Sliced)-Wasserstein Distances (A Valid Positive Definite Wasserstein Kernel for Persistence Diagrams)</a>. (NeurIPS/NIPS 2019)</p>
 </li>
 <li><p><a href="https://github.com/lttam/Kmeans-FlowTreeGW-Barycenter" target=&ldquo;blank&rdquo;>Kmeans with Flow-based Tree Gromov-Wasserstein Barycenters</a>. (ArXiv 2019)</p>
 </li>
@@ -46,7 +46,7 @@
 <p><br /><br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-02-27 10:07:19 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-03-11 10:46:32 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
