--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 Postdoctoral Researcher <br />
 <a href="http://www.riken.jp/en/research/labs/aip/" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a>. <br /></p>
 </td></tr></table>
-<p>Research interests: Optimal transport, tree-Wasserstein geometry, geometry in machine learning, Riemannian manifold, topological data analysis, kernel methods, parametric optimization, metric learning. <br /></p>
+<p>Research interests: Optimal transport, tree-Wasserstein geometry, geometric machine learning, Riemannian manifold, topological data analysis, kernel methods, parametric optimization, metric learning. <br /></p>
 <h2>Contact</h2>
 <div class="infoblock">
 <div class="blockcontent">
@@ -39,6 +39,8 @@ Yoshida Honmachi, Sakyo-ku, Kyoto, 606-8501, Japan.</p>
 My CV is <a href="https://www.dropbox.com/s/u5oogip3s60qiph/TamLe2020March.pdf?dl=0" target=&ldquo;blank&rdquo;>here</a> - Updated March, 2020.</p>
 <h2>News</h2>
 <ul>
+<li><p>05-Apr-2020, Our proposal has been accepted by the Grants-in-Aid for Young Scientists as PI (04/2020 - 03/2023).</p>
+</li>
 <li><p>26-Oct-2019, Matlab code for tree-(sliced)-Wasserstein distance in our <a href="https://neurips.cc/" target=&ldquo;blank&rdquo;>NeurIPS&rsquo;19</a> (<a href="https://arxiv.org/pdf/1902.00342.pdf" target=&ldquo;blank&rdquo;>Tree-Sliced Variants of Wasserstein Distances</a>) is available <a href="https://github.com/lttam/TreeWasserstein" target=&ldquo;blank&rdquo;>[Github]</a>.  </p>
 </li>
 <li><p>11-Oct-2019, Matlab code for Kmeans with Flow-based Tree Gromov-Wasserstein in <a href="https://arxiv.org/pdf/1910.04462.pdf" target=&ldquo;blank&rdquo;>&ldquo;Computationally Efficient Tree Variants of Gromov-Wasserstein&rdquo;</a> is available <a href="https://github.com/lttam/Kmeans-FlowTreeGW-Barycenter" target=&ldquo;blank&rdquo;>[Github]</a>.  </p>
@@ -62,7 +64,9 @@ My CV is <a href="https://www.dropbox.com/s/u5oogip3s60qiph/TamLe2020March.pdf?d
 </ul>
 <h2>Research Support</h2>
 <ul>
-<li><p>04/2017 - 03/2020, <a href="https://www.jsps.go.jp/english/e-grants/grants01.html" target=&ldquo;blank&rdquo;>JSPS KAKENHI Grant number 17K1274</a>, Grants-in-Aid for Young Scientists (B) as PI (4M JPY). </p>
+<li><p>04/2020 - 03/2023, <a href="https://www.jsps.go.jp/english/e-grants/grants01.html" target=&ldquo;blank&rdquo;>JSPS KAKENHI Grant number 20K19873</a>, Grants-in-Aid for Young Scientists as PI (4.2M JPY). </p>
+</li>
+<li><p>04/2017 - 03/2020, <a href="https://www.jsps.go.jp/english/e-grants/grants01.html" target=&ldquo;blank&rdquo;>JSPS KAKENHI Grant number 17K1274</a>, Grants-in-Aid for Young Scientists (B) as PI (4.1M JPY). </p>
 </li>
 </ul>
 <h2>Education</h2>
@@ -130,7 +134,7 @@ My CV is <a href="https://www.dropbox.com/s/u5oogip3s60qiph/TamLe2020March.pdf?d
 <p><br /><br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-03-11 10:46:32 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-04-05 15:15:57 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
