--- a/professional.html
+++ b/professional.html
@@ -32,7 +32,7 @@
 </ul>
 <p><b>Program Committee / Journal Reviewer</b></p>
 <ul>
-<li><p>Neural Information Processing Systems (<b>NeurIPS/NIPS</b>): 2015, 2019</p>
+<li><p>Neural Information Processing Systems (<b>NeurIPS/NIPS</b>): 2015, 2019-2020</p>
 </li>
 <li><p>International Conference on Machine Learning (<b>ICML</b>): 2015, 2019-2020</p>
 </li>
@@ -121,7 +121,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-03-11 10:46:32 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-04-05 15:15:57 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
