--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Graduate School of Informatics, Kyoto University <br />
 Yoshida Honmachi, Sakyo-ku, Kyoto, 606-8501, Japan.</p>
 </div></div>
 <p>Email: tam.le[<i>at</i>]riken.jp or lttam.vn[<i>at</i>]gmail.com <br />
-My CV is <a href="https://www.dropbox.com/s/u5oogip3s60qiph/TamLe2020March.pdf?dl=0" target=&ldquo;blank&rdquo;>here</a> - Updated March, 2020.</p>
+My CV is <a href="https://www.dropbox.com/s/r8snne39pydwnes/TamLe-CV-2020April.pdf?dl=0" target=&ldquo;blank&rdquo;>here</a> - Updated April, 2020.</p>
 <h2>News</h2>
 <ul>
 <li><p>05-Apr-2020, Our proposal has been accepted by the Grants-in-Aid for Young Scientists as PI (04/2020 - 03/2023).</p>
@@ -57,7 +57,7 @@ My CV is <a href="https://www.dropbox.com/s/u5oogip3s60qiph/TamLe2020March.pdf?d
 </li>
 <li><p>05-Sep-2018, Our paper, entitled <a href="http://papers.nips.cc/paper/8205-persistence-fisher-kernel-a-riemannian-manifold-kernel-for-persistence-diagrams.pdf" target=&ldquo;blank&rdquo;>&ldquo;Persistence Fisher Kernel: A Riemannian Manifold Kernel for Persistence Diagrams&rdquo;</a> has been accepted to <a href="https://nips.cc" target=&ldquo;blank&rdquo;>NeurIPS&rsquo;18</a>!  </p>
 </li>
-<li><p>01-Sep-2017, Joined in High-Dimensional Statistical Unit, RIKEN AIP as a postdoctoral researcher.</p>
+<li><p>01-Sep-2017, Joined in High-Dimensional Statistical Modeling Team, RIKEN AIP as a postdoctoral researcher.</p>
 </li>
 <li><p>05-Apr-2017, Our proposal has been accepted by the Grants-in-Aid for Young Scientists (B) as PI (04/2017 - 03/2020).</p>
 </li>
@@ -83,7 +83,7 @@ My CV is <a href="https://www.dropbox.com/s/u5oogip3s60qiph/TamLe2020March.pdf?d
 </ul>
 <h2>Research Experience</h2>
 <ul>
-<li><p>09/2017 - present, Postdoctoral Researcher, <a href="http://www.riken.jp/en/research/labs/aip/generic_tech/highdim_stat_model/" target=&ldquo;blank&rdquo;>High-Dimensional Statistical Modeling Unit</a>, <a href="http://www.riken.jp/en/research/labs/aip/" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a>.</p>
+<li><p>09/2017 - present, Postdoctoral Researcher, <a href="http://www.riken.jp/en/research/labs/aip/generic_tech/highdim_stat_model/" target=&ldquo;blank&rdquo;>High-Dimensional Statistical Modeling Team</a>, <a href="http://www.riken.jp/en/research/labs/aip/" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a>.</p>
 <ul>
 <li><p>Mentor: <a href="https://riken-yamada.github.io/profile.html" target=&ldquo;blank&rdquo;>Professor Makoto Yamada</a></p>
 </li></ul>
@@ -134,7 +134,7 @@ My CV is <a href="https://www.dropbox.com/s/u5oogip3s60qiph/TamLe2020March.pdf?d
 <p><br /><br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-04-05 15:15:57 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-04-06 16:27:00 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
