--- a/professional.html
+++ b/professional.html
@@ -38,13 +38,13 @@
 </li>
 <li><p>International Conference on Artificial Intelligence and Statistics (AISTATS): 2020</p>
 </li>
-<li><p>International Conference on Learning Representations (ICLR): 2020</p>
+<li><p>International Conference on Learning Representations (ICLR): 2020-2021</p>
 </li>
 <li><p>Machine Learning Journal (MLJ): 2017(1), 2018(1), 2019(1)</p>
 </li>
 <li><p>International Joint Conference on Artificial Intelligence (IJCAI): 2018-2020</p>
 </li>
-<li><p>AAAI Conference on Artificial Intelligence (AAAI): 2020</p>
+<li><p>AAAI Conference on Artificial Intelligence (AAAI): 2020-2021</p>
 </li>
 <li><p>Data Mining and Knowledge Discovery Journal (DMKD): 2016(1), 2017(1)</p>
 </li>
@@ -110,18 +110,20 @@
 </ul>
 <p><b>Conferences</b></p>
 <ul>
-<li><p>International Conference on Machine Learning (<b>ICML</b>): 2015, 2018-2019.</p>
+<li><p>International Conference on Machine Learning (<b>ICML</b>): 2015, 2018-2020.</p>
 </li>
 <li><p>Neural Information Processing Systems (<b>NeurIPS/NIPS</b>): 2014, 2017-2019.</p>
 </li>
-<li><p>International Conference on Artificial Intelligence and Statistics (AISTATS): 2019.</p>
+<li><p>International Conference on Artificial Intelligence and Statistics (AISTATS): 2019-2020.</p>
 </li>
-<li><p>Conference on Learning Theory (COLT): 2018.</p>
+<li><p>Conference on Learning Theory (COLT): 2018, 2020.</p>
+</li>
+<li><p>Association for Computational Linguistics (ACL): 2020.</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-06-21 07:48:55 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-08-24 22:46:49 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
