--- a/professional.html
+++ b/professional.html
@@ -36,7 +36,7 @@
 </li>
 <li><p>International Conference on Machine Learning (<b>ICML</b>): 2015, 2019-2020</p>
 </li>
-<li><p>International Conference on Artificial Intelligence and Statistics (AISTATS): 2020</p>
+<li><p>International Conference on Artificial Intelligence and Statistics (AISTATS): 2020-2021</p>
 </li>
 <li><p>International Conference on Learning Representations (ICLR): 2020-2021</p>
 </li>
@@ -61,11 +61,11 @@
 </li>
 <li><p>International Conference on Artificial Intelligence and Statistics (AISTATS): 2016, 2018</p>
 </li>
-<li><p>ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD): 2016, 2017</p>
+<li><p>ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD): 2016-2017</p>
 </li>
 <li><p>AAAI Conference on Artificial Intelligence (AAAI): 2016</p>
 </li>
-<li><p>The Web Conference (WWW): 2018, 2019</p>
+<li><p>The Web Conference (WWW): 2018-2019</p>
 </li>
 <li><p>International Conference on Information and Knowledge Management (CIKM): 2017</p>
 </li>
@@ -123,7 +123,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-08-24 22:46:49 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-08-28 09:17:34 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
