--- a/professional.html
+++ b/professional.html
@@ -36,13 +36,15 @@
 </li>
 <li><p>International Conference on Machine Learning (<b>ICML</b>): 2015, 2019-2020</p>
 </li>
+<li><p>Journal of Machine Learning Research (<b>JMLR</b>): 2020(1)</p>
+</li>
 <li><p>International Conference on Artificial Intelligence and Statistics (AISTATS): 2020-2021</p>
 </li>
 <li><p>International Conference on Learning Representations (ICLR): 2020-2021</p>
 </li>
 <li><p>Machine Learning Journal (MLJ): 2017(1), 2018(1), 2019(1)</p>
 </li>
-<li><p>International Joint Conference on Artificial Intelligence (IJCAI): 2018-2020</p>
+<li><p>International Joint Conference on Artificial Intelligence (IJCAI): 2018-2021</p>
 </li>
 <li><p>AAAI Conference on Artificial Intelligence (AAAI): 2020-2021</p>
 </li>
@@ -112,7 +114,7 @@
 <ul>
 <li><p>International Conference on Machine Learning (<b>ICML</b>): 2015, 2018-2020.</p>
 </li>
-<li><p>Neural Information Processing Systems (<b>NeurIPS/NIPS</b>): 2014, 2017-2019.</p>
+<li><p>Neural Information Processing Systems (<b>NeurIPS/NIPS</b>): 2014, 2017-2020.</p>
 </li>
 <li><p>International Conference on Artificial Intelligence and Statistics (AISTATS): 2019-2020.</p>
 </li>
@@ -123,7 +125,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-08-28 09:20:05 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-11-27 23:55:05 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
