--- a/professional.html
+++ b/professional.html
@@ -34,19 +34,21 @@
 <ul>
 <li><p>Neural Information Processing Systems (<b>NeurIPS/NIPS</b>): 2015, 2019-2020</p>
 </li>
-<li><p>International Conference on Machine Learning (<b>ICML</b>): 2015, 2019-2020</p>
+<li><p>International Conference on Machine Learning (<b>ICML</b>): 2015, 2019-2021</p>
+</li>
+<li><p>International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>): 2020-2021</p>
 </li>
 <li><p>Journal of Machine Learning Research (<b>JMLR</b>): 2020(1)</p>
 </li>
-<li><p>International Conference on Artificial Intelligence and Statistics (AISTATS): 2020-2021</p>
+<li><p>Machine Learning Journal (MLJ): 2017(1), 2018(1), 2019(1)</p>
 </li>
 <li><p>International Conference on Learning Representations (ICLR): 2020-2021</p>
-</li>
-<li><p>Machine Learning Journal (MLJ): 2017(1), 2018(1), 2019(1)</p>
 </li>
 <li><p>International Joint Conference on Artificial Intelligence (IJCAI): 2018-2021</p>
 </li>
 <li><p>AAAI Conference on Artificial Intelligence (AAAI): 2020-2021</p>
+</li>
+<li><p>Conference on Computer Vision and Pattern Recognition (CVPR): 2021</p>
 </li>
 <li><p>Data Mining and Knowledge Discovery Journal (DMKD): 2016(1), 2017(1)</p>
 </li>
@@ -59,9 +61,9 @@
 </li>
 <li><p>International Conference on Machine Learning (<b>ICML</b>): 2016-2018</p>
 </li>
-<li><p>Machine Learning Journal (MLJ): 2018(1)</p>
+<li><p>International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>): 2016, 2018</p>
 </li>
-<li><p>International Conference on Artificial Intelligence and Statistics (AISTATS): 2016, 2018</p>
+<li><p>Machine Learning Journal (MLJ): 2018(1)</p>
 </li>
 <li><p>ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD): 2016-2017</p>
 </li>
@@ -100,7 +102,7 @@
 <li><p>2011, Optimization Models for Engineering, Laurent El Ghaoui - University of California, Bekerley, USA.</p>
 </li>
 </ul>
-<h2>Participants in Summer Schools and Conferences</h2>
+<h2>Misc</h2>
 <p><b>Summer Schools</b></p>
 <ul>
 <li><p><a href="http://www.iip.ist.i.kyoto-u.ac.jp/mlss15/doku.php" target=&ldquo;blank&rdquo;>Machine Learning Summer School, Kyoto, Japan, 2015</a>.</p>
@@ -116,16 +118,41 @@
 </li>
 <li><p>Neural Information Processing Systems (<b>NeurIPS/NIPS</b>): 2014, 2017-2020.</p>
 </li>
-<li><p>International Conference on Artificial Intelligence and Statistics (AISTATS): 2019-2020.</p>
+<li><p>International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>): 2019-2020.</p>
 </li>
 <li><p>Conference on Learning Theory (COLT): 2018, 2020.</p>
 </li>
 <li><p>Association for Computational Linguistics (ACL): 2020.</p>
 </li>
 </ul>
+<p><b>Internships</b></p>
+<ul>
+<li><p>01/2014 - 02/2014, Internship student, <a href="http://lear.inrialpes.fr/" target=&ldquo;blank&rdquo;>Lear, INRIA, Grenoble, France</a>.</p>
+<ul>
+<li><p>Supervisor: <a href="http://faculty.washington.edu/zaid/" target=&ldquo;blank&rdquo;>Professor Zaid Harchaoui</a>.</p>
+</li></ul>
+</li>
+<li><p>03/2013, Internship student at <a href="http://lear.inrialpes.fr/" target=&ldquo;blank&rdquo;>Lear, INRIA, Grenoble, France</a>.</p>
+<ul>
+<li><p>Supervisor: <a href="http://faculty.washington.edu/zaid/" target=&ldquo;blank&rdquo;>Professor Zaid Harchaoui</a>.</p>
+</li></ul>
+</li>
+<li><p>08/2010 - 02/2011, Internship student, <a href="http://www.nii.ac.jp/en/" target=&ldquo;blank&rdquo;>National Institute of Informatics, Tokyo, Japan</a>.</p>
+<ul>
+<li><p>Supervisor: <a href="http://research.nii.ac.jp/~sugimoto/" target=&ldquo;blank&rdquo;>Professor Akihiro Sugimoto</a></p>
+</li></ul>
+</li>
+<li><p>04/2009 - 06/2009, Internship student, <a href="http://www.toyota-ti.ac.jp/" target=&ldquo;blank&rdquo;>Toyota Technological Institute of Nagoya, Japan</a>.</p>
+<ul>
+<li><p>Supervisor: <a href="http://www.ttic.edu/mita.php" target=&ldquo;blank&rdquo;>Professor Seiichi Mita</a></p>
+</li>
+</ul>
+
+</li>
+</ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-11-27 23:55:05 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-12-11 01:21:08 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
