--- a/professional.html
+++ b/professional.html
@@ -30,6 +30,11 @@
 <li><p><a href="http://www.iip.ist.i.kyoto-u.ac.jp/mlss12/doku.php" target=&ldquo;blank&rdquo;>Machine Learning Summer School, Kyoto, Japan, 2012</a>.</p>
 </li>
 </ul>
+<p><b>Senior Program Committee</b></p>
+<ul>
+<li><p>International Joint Conference on Artificial Intelligence (IJCAI): 2021</p>
+</li>
+</ul>
 <p><b>Program Committee / Journal Reviewer</b></p>
 <ul>
 <li><p>Neural Information Processing Systems (<b>NeurIPS/NIPS</b>): 2015, 2019-2020</p>
@@ -44,7 +49,7 @@
 </li>
 <li><p>International Conference on Learning Representations (ICLR): 2020-2021</p>
 </li>
-<li><p>International Joint Conference on Artificial Intelligence (IJCAI): 2018-2021</p>
+<li><p>International Joint Conference on Artificial Intelligence (IJCAI): 2018-2020</p>
 </li>
 <li><p>AAAI Conference on Artificial Intelligence (AAAI): 2020-2021</p>
 </li>
@@ -81,7 +86,7 @@
 </li>
 <li><p>2013, Large Scale Optimization and Machine Learning, Marco Cuturi.</p>
 </li>
-<li><p>2013, Pattern Recognition Advances, Marco Cuturi.</p>
+<li><p>2013, Pattern Recognition: Advances, Marco Cuturi.</p>
 </li>
 <li><p>2013, Statistical Machine Learning, Marco Cuturi &amp; Akihiro Yamamoto.</p>
 </li>
@@ -152,7 +157,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-12-11 01:21:08 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-01-25 11:54:22 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
