--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@ Yoshida Honmachi, Sakyo-ku, Kyoto, 606-8501, Japan.</p>
 My CV is <a href="https://www.dropbox.com/s/2rsiwe1pmhon0tx/TamLe2020June.pdf?dl=0" target=&ldquo;blank&rdquo;>here</a> - Updated June, 2020.</p>
 <h2>News</h2>
 <ul>
+<li><p>23-Jan-2021, Our 2 papers, entitled <a href="https://arxiv.org" target=&ldquo;blank&rdquo;>&ldquo;Entropy Partial Transport with Tree Metrics: Theory and Practice&rdquo;</a> (joint work with Truyen Nguyen) and <a href="https://arxiv.org/pdf/1910.04462.pdf" target=&ldquo;blank&rdquo;>&ldquo;Flow-based Alignment Approaches for Probability Measures in Different Spaces&rdquo;</a> (joint work with Nhat Ho and Makoto Yamada), have been accepted to <a href="https://aistats.org/aistats2021/" target=&ldquo;blank&rdquo;>AISTATS&rsquo;21</a>.</p>
+</li>
 <li><p>05-Apr-2020, Our proposal has been accepted by the Grants-in-Aid for Young Scientists as PI (04/2020 - 03/2023).</p>
 </li>
 <li><p>26-Oct-2019, Matlab code for tree-(sliced)-Wasserstein distance in our <a href="https://neurips.cc/" target=&ldquo;blank&rdquo;>NeurIPS&rsquo;19</a> (<a href="https://arxiv.org/pdf/1902.00342.pdf" target=&ldquo;blank&rdquo;>Tree-Sliced Variants of Wasserstein Distances</a>) is available <a href="https://github.com/lttam/TreeWasserstein" target=&ldquo;blank&rdquo;>[Github]</a>.  </p>
@@ -86,7 +88,7 @@ My CV is <a href="https://www.dropbox.com/s/2rsiwe1pmhon0tx/TamLe2020June.pdf?dl
 <li><p>Mentor: <a href="https://riken-yamada.github.io/profile.html" target=&ldquo;blank&rdquo;>Professor Makoto Yamada</a></p>
 </li></ul>
 </li>
-<li><p>02/2016 - 08/2017, Postdoctoral Researcher, <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/" target=&ldquo;blank&rdquo;>Nagoya Institute of Technology, Japan</a> &amp; <a href="https://www.nims.go.jp/eng/" target=&ldquo;blank&rdquo;>National Institute for Materials Science, Japan</a>.</p>
+<li><p>02/2016 - 08/2017, Postdoctoral Researcher, <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/" target=&ldquo;blank&rdquo;>Nagoya Institute of Technology</a> &amp; <a href="https://www.nims.go.jp/eng/" target=&ldquo;blank&rdquo;>National Institute for Materials Science, Japan</a>.</p>
 <ul>
 <li><p>Mentor: <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/" target=&ldquo;blank&rdquo;>Professor Ichiro Takeuchi</a>.</p>
 </li></ul>
@@ -107,7 +109,7 @@ My CV is <a href="https://www.dropbox.com/s/2rsiwe1pmhon0tx/TamLe2020June.pdf?dl
 <p><br /><br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-12-11 01:21:07 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-01-25 11:54:22 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
