--- a/publication.html
+++ b/publication.html
@@ -23,22 +23,42 @@
 <p>(<font color="red">*</font>: equal contribution)</p>
 <h2>Selected Journals / Conference papers</h2>
 <ul>
+<li><p><a href="https://arxiv.org" target=&ldquo;blank&rdquo;><font color="blue">Entropy Partial Transport with Tree Metrics: Theory and Practice</font></a> <br />
+International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>), 2021. (<i>Acceptance rate: 455/1527=29.8%</i>) <br /> 
+<b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font></p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/pdf/1910.04462.pdf" target=&ldquo;blank&rdquo;><font color="blue">Flow-based Alignment Approaches for Probability Measures in Different Spaces</font></a> <br />
+International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>), 2021. (<i>Acceptance rate: 455/1527=29.8%</i>) <br /> 
+<b>Tam Le</b><font color="red">*</font>, Nhat Ho<font color="red">*</font>, Makoto Yamada</p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://papers.nips.cc/paper/9396-tree-sliced-variants-of-wasserstein-distances.pdf" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Variants of Wasserstein Distances</font></a>. [<a href="https://papers.nips.cc/paper/9396-tree-sliced-variants-of-wasserstein-distances-supplemental.zip" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/4ugbmyu5jepxun0/TLMYKFMC_NeurIPS19_TSW.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
 Neural Information Processing Systems (<b>NeurIPS/NIPS</b>), 2019. (<i>Acceptance rate: 1428/6743=21.2%</i>) <br /> 
 <b>Tam Le</b>, Makoto Yamada, Kenji Fukumizu, Marco Cuturi</p>
 </li>
+</ul>
+<ul>
 <li><p><a href="http://proceedings.mlr.press/v97/ndiaye19a/ndiaye19a.pdf" target=&ldquo;blank&rdquo;><font color="blue">Safe Grid Search with Optimal Complexity</font></a>. [<a href="http://proceedings.mlr.press/v97/ndiaye19a/ndiaye19a-supp.pdf" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/f4appwq8sghnz31/poster_icml2019_ndiaye_final.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>]  <br />
 International Conference on Machine Learning (<b>ICML</b>), 2019. (<i>Acceptance rate: 773/3424=22.6%</i>) <br />
 Eugene Ndiaye, <b>Tam Le</b>, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi</p>
 </li>
+</ul>
+<ul>
 <li><p><a href="http://papers.nips.cc/paper/8205-persistence-fisher-kernel-a-riemannian-manifold-kernel-for-persistence-diagrams.pdf" target=&ldquo;blank&rdquo;><font color="blue">Persistence Fisher Kernel: A Riemannian Manifold Kernel for Persistence Diagrams</font></a>. [<a href="http://papers.nips.cc/paper/8205-persistence-fisher-kernel-a-riemannian-manifold-kernel-for-persistence-diagrams-supplemental.zip" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/o99zja0qtzpdzci/TLMY_NIPS18_PFKernel_PD.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>]  <br />
 Neural Information Processing Systems (<b>NeurIPS/NIPS</b>), 2018. (<i>Acceptance rate: 1011/4856=20.8%</i>) <br />
 <b>Tam Le</b>, Makoto Yamada</p>
 </li>
+</ul>
+<ul>
 <li><p><a href="http://proceedings.mlr.press/v37/le15.pdf" target=&ldquo;blank&rdquo;><font color="blue">Unsupervised Riemannian Metric Learning for Histograms Using Aitchison Transformations</font></a>. [<a href="http://videolectures.net/icml2015_le_histograms/?q=Tam\\%20Le" target=&ldquo;blank&rdquo;>Video</a>/<a href="http://proceedings.mlr.press/v37/le15-supp.pdf" target=&ldquo;blank&rdquo;>Supplemental</a>/<a href="https://www.dropbox.com/s/vj4gsgnazrhlvdt/TL.MC.ICML2015.Slide.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>/<a href="https://www.dropbox.com/s/4zboqoil7gwn3i1/TL.MC.ICML2015.Poster.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] <br />
 International Conference on Machine Learning (<b>ICML</b>), 2015. (<i>Acceptance rate: 270/1037 = 26.0%</i>) <br />
 <b>Tam Le</b>, Marco Cuturi</p>
 </li>
+</ul>
+<ul>
 <li><p><a href="https://www.dropbox.com/s/ag7hy2v7wdilu4j/TL.MC.MLJ2014.pdf?dl=0" target=&ldquo;blank&rdquo;><font color="blue">Adaptive Euclidean Maps for Histograms: Generalized Aitchison Embeddings</font></a> <br />
 Machine Learning Journal (<b>MLJ</b>), 2014. <br />
 <b>Tam Le</b>, Marco Cuturi</p>
@@ -47,10 +67,6 @@ Machine Learning Journal (<b>MLJ</b>), 2014. <br />
 <h2>Others</h2>
 <p><b>Preprints</b></p>
 <ul>
-<li><p><a href="https://arxiv.org/pdf/1910.04462.pdf" target=&ldquo;blank&rdquo;><font color="blue">Flow-based Alignment Approaches for Probability Measures in Different Spaces</font></a> <br />
-ArXiv. <br />
-<b>Tam Le</b><font color="red">*</font>, Nhat Ho<font color="red">*</font>, Makoto Yamada</p>
-</li>
 <li><p><a href="https://arxiv.org/pdf/2006.07593.pdf" target=&ldquo;blank&rdquo;><font color="blue">Optimal Transport Kernels for Sequential and Parallel Neural Architecture Search</font></a> <br />
 ArXiv. <br />
 Vu Nguyen<font color="red">*</font>, <b>Tam Le</b><font color="red">*</font>, Makoto Yamada, Michael A. Osborne</p>
@@ -117,6 +133,8 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 </ul>
 <p><b>Talks</b></p>
 <ul>
+<li><p>2021, <font color="blue">An Introduction on Tree-(Sliced)-Wasserstein Geometry</font>, RIKEN AIP Open Seminar Series, Virtual. [<a href="https://www.dropbox.com/s/6tpdgjy7nqp93gq/TamLe_TW_RIKEN%20Open%20Seminar_FINAL_2021.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]</p>
+</li>
 <li><p>2019, <font color="blue">Kernel methods for Persistence Diagrams: A Geometric Approach</font>, Institute for Advanced Study, Kyoto University, Japan. [<a href="https://www.dropbox.com/s/gejiyhbjfcpfk4t/2019July_TDA_GeometricKernel.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]</p>
 </li>
 <li><p>2016, <font color="blue">Geometry-Aware Metric Learning for Histograms</font>, <a href="http://www.nims.go.jp/MII-I/event/h6g4rf000000034y-att/h6g4rf000000036n.pdf" target=&ldquo;blank&rdquo;>MI2I Open Seminar Series</a>, National Institute for Materials Science, Tsukuba, Japan. [<a href="https://www.dropbox.com/s/o6nrtzh39si8u7p/TamLe_NIMS_June2016.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]</p>
@@ -132,7 +150,7 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-12-11 01:21:08 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-01-25 11:54:22 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
