--- a/publication.html
+++ b/publication.html
@@ -72,36 +72,56 @@ ArXiv. <br />
 Vu Nguyen<font color="red">*</font>, <b>Tam Le</b><font color="red">*</font>, Makoto Yamada, Michael A. Osborne</p>
 </li>
 </ul>
-<p><b>Other Journals / Conference papers / Technical reports</b></p>
 <ul>
 <li><p><a href="https://arxiv.org/pdf/1910.04483.pdf" target=&ldquo;blank&rdquo;><font color="blue">Tree-Wasserstein Barycenter for Large-Scale Multilevel Clustering and Scalable Bayes</font></a> <br />
 ArXiv. <br />
 <b>Tam Le</b><font color="red">*</font>, Viet Huynh<font color="red">*</font>, Nhat Ho<font color="red">*</font>, Dinh Phung, Makoto Yamada</p>
 </li>
-<li><p><a href="https://arxiv.org/pdf/1902.09722.pdf" target=&ldquo;blank&rdquo;><font color="blue">Topological Bayesian Optimization with Persistence Diagrams</font></a> <br />
-European Conference on Artificial Intelligence (ECAI), 2020. (<i>Acceptance rate: 365/1363 = 26.8%</i>) <br />
-Tatsuya Shiraishi, <b>Tam Le</b>, Hisashi Kashima, Makoto Yamada</p>
-</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/pdf/1909.02373.pdf" target=&ldquo;blank&rdquo;><font color="blue">LSMI-Sinkhorn: Semi-supervised Squared-Loss Mutual Information Estimation with Optimal Transport</font></a> <br />
 ArXiv. <br />
 Yanbin Liu<font color="red">*</font>, Makoto Yamada<font color="red">*</font>, Yao-Hung Hubert Tsai, <b>Tam Le</b>, Ruslan Salakhutdinov, Yi Yang</p>
 </li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org" target=&ldquo;blank&rdquo;><font color="blue">Point-set Distances for Learning Representations of 3D Point Clouds</font></a> <br />
+<i>Under review</i>. <br />
+Trung Nguyen, Hieu Pham, <b>Tam Le</b>, Nhat Ho, Tung Pham, Son Hua.</p>
+</li>
+</ul>
+<p><b>Other Journals / Conference papers</b></p>
+<ul>
+<li><p><a href="https://arxiv.org/pdf/1902.09722.pdf" target=&ldquo;blank&rdquo;><font color="blue">Topological Bayesian Optimization with Persistence Diagrams</font></a> <br />
+European Conference on Artificial Intelligence (ECAI), 2020. (<i>Acceptance rate: 365/1363 = 26.8%</i>) <br />
+Tatsuya Shiraishi, <b>Tam Le</b>, Hisashi Kashima, Makoto Yamada</p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://www.tandfonline.com/doi/full/10.1080/14686996.2018.1439253#aHR0cHM6Ly93d3cudGFuZGZvbmxpbmUuY29tL2RvaS9wZGYvMTAuMTA4MC8xNDY4Njk5Ni4yMDE4LjE0MzkyNTM/bmVlZEFjY2Vzcz10cnVlQEBAMA==" target=&ldquo;blank&rdquo;><font color="blue">A General Representation Scheme for Crystalline Solids based on Voronoi-Tessellation Real Feature Values and Atomic Property Data</font></a> <br />
 Science and Technology of Advance Materials Journal (STAM), 2018. <br />
 Randy Jalem, Masanobu Nakayama, Yusuke Noda, <b>Tam Le</b>, Ichiro Takeuchi, Yoshitaka Tateyama, Hisatsugu Yamazaki</p>
 </li>
+</ul>
+<ul>
 <li><p><a href="http://proceedings.mlr.press/v29/Le13.pdf" target=&ldquo;blank&rdquo;><font color="blue">Generalized Aitchison Embeddings for Histograms</font></a>. [<a href="https://799a327a-a-62cb3a1a-s-sites.googlegroups.com/site/tamtle85/acml13/TamLe_ACML13.pdf?attachauth=ANoY7co0ctNrM6IGtGy7-HUUGaF_jZNDALnhKuyeXTvrvnRFksIGZaEm5xtXaqY8o92WUlHWgomz46LrFTNuAxHpyH260KPc9qFskG75521q96T1aVUXrtSSJsMZowtTBxFO5cMtu6l4GYPQT-rsx97SfSU8QxMoGN-ik17jgZyKGNqWVINs36qZ7VDnUYopGTOi0_vMOKI5AHjMnjTEm_yWp9VdkJcA05GFzRhsNpNJqZewg222Sqo%3D&amp;attredirects=0" target=&ldquo;blank&rdquo;>SLIDE</a>] <br />
 Asian Conference on Machine Learning (ACML), 2013 (oral). (<i>Oral paper rate: 9.7%</i>) <br />
 <b>Tam Le</b>, Marco Cuturi</p>
 </li>
+</ul>
+<ul>
 <li><p><a href="https://799a327a-a-62cb3a1a-s-sites.googlegroups.com/site/tamtle85/hsmk-code/TL.YK.AS-HSMK-IIEEJ13.pdf?attachauth=ANoY7cptnG2XULNdwNvStBxHRF8txio8ZQk3x6EZgWSPZPNf91QFmZQAI4gI6v7o2bS48WD9Pcn-KC1VGm43cZh6E0nH_xC0jDkQ22HyVHkW7V-8NOF0cpQGaxgdxxtsQqz50Mc3PkLvMsSSCxyiGCTgUmzdycH3WiQK64E9RV6dYDItqJs-EJZbTCq9qJT6enMaItGICb7BP6M1ybUWqCMEXIBBw7JAUtmDfUZkl2auPdjT5bSEw_o%3D&amp;attredirects=0" target=&ldquo;blank&rdquo;><font color="blue">Image Categorization Using Hierarchical Spatial Matching Kernel</font></a> <br />
 Journal of the Institute of Image Electronics Engineers of Japan (IIEEJ), Vol. 42, No. 2, 2013. <br />
 <b>Tam Le</b>, Yousun Kang, Akihiro Sugimoto</p>
 </li>
+</ul>
+<ul>
 <li><p><a href="https://www.dropbox.com/s/4bqrsuzn9as0tix/TamLe-ICIAR11.pdf?dl=0" target=&ldquo;blank&rdquo;><font color="blue">Hierarchical Spatial Matching Kernel for Image Categorization</font></a>. [<a href="https://f2496fb7-a-62cb3a1a-s-sites.googlegroups.com/site/lttam85/Home/TamLe-HSMK-ICIAR11.pdf?attachauth=ANoY7crjZ3Vt6hzUNYaDrFcbxZa7jywngZ-KX3FDN8uMs7NLsMbGWBOp122P29kFrRmXAgYLVtN6VKr-TksXj7p_XUSOyo_WDfmjl_6xRsFR-Cf3OTCfrdyLoGvODtRi7i5xS3L0j1jKiAf-EncSOtNba7Qaq1EL46LaG9rLERKLvr39AeOSKb8MVy5oN2o-mW0PMEwIfDW8p8jIUPR_XBAqg2hpJoJSMKOtzihdKDvTMGuhBiniQIk%3D&amp;attredirects=0" target=&ldquo;blank&rdquo;>SLIDE</a>] <br />
 International Conference on Image Processing and Recognition (ICIAR), 2011 (oral). (<i>Oral paper rate: 25%</i>)<br />
 <b>Tam Le</b>, Yousun Kang, Akihiro Sugimoto, Son Tran, Thuc Nguyen</p>
 </li>
+</ul>
+<ul>
 <li><p><a href="https://www.dropbox.com/s/987ev6ok1dtatyj/TamLe-ACIIDS10.pdf?dl=0" target=&ldquo;blank&rdquo;><font color="blue">Realtime Traffic Sign Detection Using Color and Shape-Based Features</font></a> <br />
 Asian Conference on Intelligent Information and Database Systems (ACIIDS), 2010 (oral). <br />
 <b>Tam Le</b>, Son Tran, Seichii Mita, Thuc Nguyen</p>
@@ -150,7 +170,7 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-01-25 11:54:22 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-01-25 12:29:07 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
