--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@ My CV is <a href="https://www.dropbox.com/s/9j8tgk5wqlf45lj/tamle2021january.pdf
 <ul>
 <li><p>23-Jan-2021, Our 2 papers, entitled <a href="https://arxiv.org" target=&ldquo;blank&rdquo;>&ldquo;Entropy Partial Transport with Tree Metrics: Theory and Practice&rdquo;</a> (joint work with Truyen Nguyen) and <a href="https://arxiv.org/pdf/1910.04462.pdf" target=&ldquo;blank&rdquo;>&ldquo;Flow-based Alignment Approaches for Probability Measures in Different Spaces&rdquo;</a> (joint work with Nhat Ho and Makoto Yamada), have been accepted to <a href="https://aistats.org/aistats2021/" target=&ldquo;blank&rdquo;>AISTATS&rsquo;21</a>.</p>
 </li>
+<li><p>23-Jan-2021, <a href="https://www.dropbox.com/s/6tpdgjy7nqp93gq/TamLe_TW_RIKEN%20Open%20Seminar_FINAL_2021.pdf?dl=0" target=&ldquo;blank&rdquo;>Slides</a> for my presentation (An Introduction on Tree-(Sliced)-Wasserstein Geometry) at RIKEN AIP Open Seminar Series, Virtual.</p>
+</li>
 <li><p>05-Apr-2020, Our proposal has been accepted by the Grants-in-Aid for Young Scientists as PI (04/2020 - 03/2023).</p>
 </li>
 <li><p>26-Oct-2019, Matlab code for tree-(sliced)-Wasserstein distance in our <a href="https://neurips.cc/" target=&ldquo;blank&rdquo;>NeurIPS&rsquo;19</a> (<a href="https://arxiv.org/pdf/1902.00342.pdf" target=&ldquo;blank&rdquo;>Tree-Sliced Variants of Wasserstein Distances</a>) is available <a href="https://github.com/lttam/TreeWasserstein" target=&ldquo;blank&rdquo;>[Github]</a>.  </p>
@@ -109,7 +111,7 @@ My CV is <a href="https://www.dropbox.com/s/9j8tgk5wqlf45lj/tamle2021january.pdf
 <p><br /><br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-01-25 12:29:06 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-01-26 01:56:56 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
