--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ Yoshida Honmachi, Sakyo-ku, Kyoto, 606-8501, Japan.</p>
 My CV is <a href="https://www.dropbox.com/s/9j8tgk5wqlf45lj/tamle2021january.pdf?dl=0" target=&ldquo;blank&rdquo;>here</a> - Updated January, 2021.</p>
 <h2>News</h2>
 <ul>
-<li><p>23-Jan-2021, Our 2 papers, entitled <a href="https://arxiv.org" target=&ldquo;blank&rdquo;>&ldquo;Entropy Partial Transport with Tree Metrics: Theory and Practice&rdquo;</a> (joint work with Truyen Nguyen) and <a href="https://arxiv.org/pdf/1910.04462.pdf" target=&ldquo;blank&rdquo;>&ldquo;Flow-based Alignment Approaches for Probability Measures in Different Spaces&rdquo;</a> (joint work with Nhat Ho and Makoto Yamada), have been accepted to <a href="https://aistats.org/aistats2021/" target=&ldquo;blank&rdquo;>AISTATS&rsquo;21</a>.</p>
+<li><p>23-Jan-2021, Two papers, entitled <a href="https://arxiv.org/pdf/2101.09756.pdf" target=&ldquo;blank&rdquo;>&ldquo;Entropy Partial Transport with Tree Metrics: Theory and Practice&rdquo;</a> (joint work with Truyen Nguyen)&#8201;&mdash;&#8201;selected for <i><b>oral</b></i> presentation&#8201;&mdash;&#8201;and <a href="https://arxiv.org/pdf/1910.04462.pdf" target=&ldquo;blank&rdquo;>&ldquo;Flow-based Alignment Approaches for Probability Measures in Different Spaces&rdquo;</a> (joint work with Nhat Ho and Makoto Yamada), have been accepted to <a href="https://aistats.org/aistats2021/" target=&ldquo;blank&rdquo;>AISTATS&rsquo;21</a>.</p>
 </li>
 <li><p>23-Jan-2021, <a href="https://www.dropbox.com/s/6tpdgjy7nqp93gq/TamLe_TW_RIKEN%20Open%20Seminar_FINAL_2021.pdf?dl=0" target=&ldquo;blank&rdquo;>Slides</a> for my presentation (An Introduction on Tree-(Sliced)-Wasserstein Geometry) at RIKEN AIP Open Seminar Series, Virtual.</p>
 </li>
@@ -111,7 +111,7 @@ My CV is <a href="https://www.dropbox.com/s/9j8tgk5wqlf45lj/tamle2021january.pdf
 <p><br /><br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-01-26 01:56:56 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-01-29 11:10:33 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
