--- a/publication.html
+++ b/publication.html
@@ -23,11 +23,12 @@
 <p>(<font color="red">*</font>: equal contribution)</p>
 <h2>Selected Journals / Conference papers</h2>
 <ul>
-<li><p><a href="https://arxiv.org" target=&ldquo;blank&rdquo;><font color="blue">Entropy Partial Transport with Tree Metrics: Theory and Practice</font></a> <br />
-International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>), 2021. (<i>Acceptance rate: 455/1527=29.8%</i>) <br /> 
+<li><p><a href="https://arxiv.org/pdf/2101.09756.pdf" target=&ldquo;blank&rdquo;><font color="blue">Entropy Partial Transport with Tree Metrics: Theory and Practice</font></a> <br />
+International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>), 2021. (<i>Oral rate: 48/1527=3.1%</i>) <br /> 
 <b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font></p>
 </li>
 </ul>
+<p><font color="green">This paper was selected for /*oral*/ presentation; oral : acceptance : submissions = 48 : 455 : 1527</font></p>
 <ul>
 <li><p><a href="https://arxiv.org/pdf/1910.04462.pdf" target=&ldquo;blank&rdquo;><font color="blue">Flow-based Alignment Approaches for Probability Measures in Different Spaces</font></a> <br />
 International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>), 2021. (<i>Acceptance rate: 455/1527=29.8%</i>) <br /> 
@@ -170,7 +171,7 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-01-26 01:56:56 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-01-29 11:10:34 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
