--- a/publication.html
+++ b/publication.html
@@ -25,7 +25,7 @@
 <ul>
 <li><p><a href="https://arxiv.org/pdf/2101.09756.pdf" target=&ldquo;blank&rdquo;><font color="blue">Entropy Partial Transport with Tree Metrics: Theory and Practice</font></a> <br />
 International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>), 2021. (<i>Oral rate: 48/1527=3.1%</i>) <br /> 
-<b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font></p>
+<b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font> <br /></p>
 </li>
 </ul>
 <p><font color="green">This paper was selected for /*oral*/ presentation; oral : acceptance : submissions = 48 : 455 : 1527</font></p>
@@ -171,7 +171,7 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-01-29 11:10:34 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-01-29 11:12:44 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
