--- a/publication.html
+++ b/publication.html
@@ -26,8 +26,7 @@
 <li><p><a href="https://arxiv.org/pdf/2101.09756.pdf" target=&ldquo;blank&rdquo;><font color="blue">Entropy Partial Transport with Tree Metrics: Theory and Practice</font></a> <br />
 International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>), 2021. (<i>Oral rate: 48/1527=3.1%</i>) <br /> 
 <b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font> <br />
-(This paper was selected for oral presentation. Oral : acceptance : submissions = 48 : 455 : 1527)
-</p>
+(<font color="green">This paper was selected for oral presentation.</font> Oral : acceptance : submissions = 48 : 455 : 1527)</p>
 </li>
 </ul>
 <ul>
@@ -172,7 +171,7 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-01-29 11:24:06 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-01-29 11:28:01 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
