--- a/publication.html
+++ b/publication.html
@@ -86,8 +86,8 @@ Yanbin Liu<font color="red">*</font>, Makoto Yamada<font color="red">*</font>, Y
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org" target=&ldquo;blank&rdquo;><font color="blue">Point-set Distances for Learning Representations of 3D Point Clouds</font></a> <br />
-<i>Under review</i>. <br />
+<li><p><a href="https://arxiv.org/pdf/2102.04014.pdf" target=&ldquo;blank&rdquo;><font color="blue">Point-set Distances for Learning Representations of 3D Point Clouds</font></a> <br />
+ArXiv. <br />
 Trung Nguyen, Hieu Pham, <b>Tam Le</b>, Nhat Ho, Tung Pham, Son Hua.</p>
 </li>
 </ul>
@@ -171,7 +171,7 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-01-29 11:28:01 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-02-15 11:45:27 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
