--- a/publication.html
+++ b/publication.html
@@ -88,7 +88,7 @@ Yanbin Liu<font color="red">*</font>, Makoto Yamada<font color="red">*</font>, Y
 <ul>
 <li><p><a href="https://arxiv.org/pdf/2102.04014.pdf" target=&ldquo;blank&rdquo;><font color="blue">Point-set Distances for Learning Representations of 3D Point Clouds</font></a> <br />
 ArXiv. <br />
-Trung Nguyen, Hieu Pham, <b>Tam Le</b>, Nhat Ho, Tung Pham, Son Hua.</p>
+Trung Nguyen, Quang-Hieu Pham, <b>Tam Le</b>, Nhat Ho, Tung Pham, Binh-Son Hua.</p>
 </li>
 </ul>
 <p><b>Other Journals / Conference papers</b></p>
@@ -171,7 +171,7 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-02-15 11:45:27 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-02-15 11:47:44 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
