--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@ Graduate School of Informatics, Kyoto University <br />
 Yoshida Honmachi, Sakyo-ku, Kyoto, 606-8501, Japan.</p>
 </div></div>
 <p>Email: tam.le[<i>at</i>]riken.jp or lttam.vn[<i>at</i>]gmail.com <br />
-My CV is <a href="https://www.dropbox.com/s/obru4fb40xlglvd/TamLe2021February.pdf?dl=0" target=&ldquo;blank&rdquo;>here</a> - Updated February, 2021.</p>
+My CV is <a href="https://www.dropbox.com/s/c8bdlut1inof3c2/TamLe2021May.pdf?dl=0" target=&ldquo;blank&rdquo;>here</a> - Updated May, 2021.</p>
 <h2>News</h2>
 <ul>
+<li><p>08-May-2021, Our paper, entitled <a href="https://arxiv.org/pdf/2006.07593.pdf" target=&ldquo;blank&rdquo;>&ldquo;Optimal Transport Kernels for Sequential and Parallel Neural Architecture Search&rdquo;</a> has been accepted to ICML&rsquo;21! This is joint work with Vu Nguyen, Makoto Yamada, and Michael A. Osborne.</p>
+</li>
 <li><p>23-Jan-2021, Two papers, entitled <a href="https://arxiv.org/pdf/2101.09756.pdf" target=&ldquo;blank&rdquo;>&ldquo;Entropy Partial Transport with Tree Metrics: Theory and Practice&rdquo;</a> (joint work with Truyen Nguyen)&#8201;&mdash;&#8201;selected for <i><b>oral</b></i> presentation&#8201;&mdash;&#8201;and <a href="https://arxiv.org/pdf/1910.04462.pdf" target=&ldquo;blank&rdquo;>&ldquo;Flow-based Alignment Approaches for Probability Measures in Different Spaces&rdquo;</a> (joint work with Nhat Ho and Makoto Yamada), have been accepted to <a href="https://aistats.org/aistats2021/" target=&ldquo;blank&rdquo;>AISTATS&rsquo;21</a>.</p>
 </li>
 <li><p>23-Jan-2021, <a href="https://www.dropbox.com/s/6tpdgjy7nqp93gq/TamLe_TW_RIKEN%20Open%20Seminar_FINAL_2021.pdf?dl=0" target=&ldquo;blank&rdquo;>Slides</a> for my presentation (An Introduction on Tree-(Sliced)-Wasserstein Geometry) at RIKEN AIP Open Seminar Series, Virtual.</p>
@@ -111,7 +113,7 @@ My CV is <a href="https://www.dropbox.com/s/obru4fb40xlglvd/TamLe2021February.pd
 <p><br /><br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-02-15 11:47:44 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-05-11 16:27:07 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
