--- a/publication.html
+++ b/publication.html
@@ -23,6 +23,12 @@
 <p>(<font color="red">*</font>: equal contribution)</p>
 <h2>Selected Journals / Conference papers</h2>
 <ul>
+<li><p><a href="https://arxiv.org/pdf/2006.07593.pdf" target=&ldquo;blank&rdquo;><font color="blue">Optimal Transport Kernels for Sequential and Parallel Neural Architecture Search</font></a> <br />
+International Conference on Machine Learning (<b>ICML</b>), 2021. (<i>Acceptance rate: 1184/5513=21.5%</i>) <br />
+Vu Nguyen<font color="red">*</font>, <b>Tam Le</b><font color="red">*</font>, Makoto Yamada, Michael A. Osborne</p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/pdf/2101.09756.pdf" target=&ldquo;blank&rdquo;><font color="blue">Entropy Partial Transport with Tree Metrics: Theory and Practice</font></a> <br />
 International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>), 2021. (<i>Oral rate: 48/1527=3.1%</i>) <br /> 
 <b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font> <br />
@@ -67,12 +73,6 @@ Machine Learning Journal (<b>MLJ</b>), 2014. <br />
 </ul>
 <h2>Others</h2>
 <p><b>Preprints</b></p>
-<ul>
-<li><p><a href="https://arxiv.org/pdf/2006.07593.pdf" target=&ldquo;blank&rdquo;><font color="blue">Optimal Transport Kernels for Sequential and Parallel Neural Architecture Search</font></a> <br />
-ArXiv. <br />
-Vu Nguyen<font color="red">*</font>, <b>Tam Le</b><font color="red">*</font>, Makoto Yamada, Michael A. Osborne</p>
-</li>
-</ul>
 <ul>
 <li><p><a href="https://arxiv.org/pdf/1910.04483.pdf" target=&ldquo;blank&rdquo;><font color="blue">Tree-Wasserstein Barycenter for Large-Scale Multilevel Clustering and Scalable Bayes</font></a> <br />
 ArXiv. <br />
@@ -171,7 +171,7 @@ PhD thesis, Kyoto University, Japan, 2015.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-02-15 11:47:44 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-05-11 16:27:07 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
